@@ -38,6 +38,7 @@ Changes for 1.4.j:
 
 Changes for 1.4.6:
 
+ - [ZBX-404] fixed update of item "Download speed for scenario '...'" (Sasha)
  - [ZBX-389] added escaping in SQL statement in DBupdate_graph (Sasha)
  - [ZBX-286] fixed possible server crash on some platforms (Sasha)
  - [ZBX-272] fixed default link to local interface in *BSD for net.if* items (Sasha)
